--- a/.atom/packages/language-ocaml/package.json
+++ b/.atom/packages/language-ocaml/package.json
@@ -1,35 +1,62 @@
 {
-  "name": "language-ocaml",
-  "version": "1.1.2",
-  "private": true,
+  "_args": [
+    [
+      {
+        "raw": "/tmp/d-11747-6363-uz9ufa/package.tgz",
+        "scope": null,
+        "escapedName": null,
+        "name": null,
+        "rawSpec": "/tmp/d-11747-6363-uz9ufa/package.tgz",
+        "spec": "/tmp/d-11747-6363-uz9ufa/package.tgz",
+        "type": "local"
+      },
+      "/tmp/apm-install-dir-11747-6363-1fsdwny"
+    ]
+  ],
+  "_from": "../d-11747-6363-uz9ufa/package.tgz",
+  "_id": "language-ocaml@1.8.0",
+  "_inCache": true,
+  "_installable": true,
+  "_location": "/language-ocaml",
+  "_phantomChildren": {},
+  "_requested": {
+    "raw": "/tmp/d-11747-6363-uz9ufa/package.tgz",
+    "scope": null,
+    "escapedName": null,
+    "name": null,
+    "rawSpec": "/tmp/d-11747-6363-uz9ufa/package.tgz",
+    "spec": "/tmp/d-11747-6363-uz9ufa/package.tgz",
+    "type": "local"
+  },
+  "_requiredBy": [
+    "#USER"
+  ],
+  "_resolved": "file:../d-11747-6363-uz9ufa/package.tgz",
+  "_shasum": "19a22c3e336914cd7daa8f464228e5022da87f96",
+  "_shrinkwrap": null,
+  "_spec": "/tmp/d-11747-6363-uz9ufa/package.tgz",
+  "_where": "/tmp/apm-install-dir-11747-6363-1fsdwny",
+  "bugs": {
+    "url": "https://github.com/toroidal-code/language-ocaml/issues"
+  },
+  "dependencies": {},
   "description": "Syntax support for the OCaml language",
+  "devDependencies": {
+    "atom-grammar-test": "^0.6.3"
+  },
+  "engines": {
+    "atom": ">0.50.0"
+  },
+  "homepage": "https://github.com/toroidal-code/language-ocaml#readme",
+  "license": "MIT",
+  "name": "language-ocaml",
+  "optionalDependencies": {},
+  "private": true,
+  "readme": "# OCaml Atom package\n\nAdds syntax highlighting to OCaml files in Atom.\n\nOriginally [converted](https://atom.io/docs/latest/converting-a-text-mate-bundle) from the [OCaml TextMate bundle](https://github.com/textmate/ocaml.tmbundle).\n\nContributions are greatly appreciated.\nPlease fork this repository and open a pull request to add snippets, make grammar tweaks, etc.\n",
+  "readmeFilename": "README.md",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/toroidal-code/language-ocaml.git"
   },
-  "license": "MIT",
-  "engines": {
-    "atom": ">0.50.0"
-  },
-  "dependencies'": {},
-  "readme": "# OCaml Atom package\nAdds syntax highlighting to OCaml files in Atom.\n\nOriginally [converted](https://atom.io/docs/latest/converting-a-text-mate-bundle) from the [OCaml TextMate bundle](https://github.com/textmate/ocaml.tmbundle).\n\nContributions are greatly appreciated.\nPlease fork this repository and open a pull request to add snippets, make grammar tweaks, etc.\n",
-  "readmeFilename": "README.md",
-  "bugs": {
-    "url": "https://github.com/toroidal-code/language-ocaml/issues"
-  },
-  "homepage": "https://github.com/toroidal-code/language-ocaml#readme",
-  "_id": "language-ocaml@1.1.2",
-  "_shasum": "6826e113d8e11bd02c62f0b27d12147eb2600b43",
-  "_resolved": "file:../d-11607-6191-1b8zkv2/package.tgz",
-  "_from": "../d-11607-6191-1b8zkv2/package.tgz",
-  "_atomModuleCache": {
-    "version": 1,
-    "dependencies": [],
-    "extensions": {
-      ".json": [
-        "package.json"
-      ]
-    },
-    "folders": []
-  }
+  "version": "1.8.0"
 }
