--- a/.tmux.conf
+++ b/.tmux.conf
@@ -2,7 +2,7 @@
 set-option -g default-shell /usr/bin/zsh
 
 # Status bar configuration
-set -g status-utf8 on
+# set -g status-utf8 on
 set -g status-bg black
 set -g status-fg white
 set -g status-interval 5
@@ -26,3 +26,11 @@ bind-key C-a send-prefix
 # Scrollback buffer
 set-option -g history-limit 3000
 
+# VI keyboard shortcuts
+# setw -g mode-keys vi
+#
+# vim-like pane switching
+bind -r k select-pane -U 
+bind -r j select-pane -D 
+bind -r h select-pane -L 
+bind -r l select-pane -R 
