Add various vim/tmux settings

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -40,3 +40,6 @@ bind -r l select-pane -R
 
 # tmux resurrection after system restart
 run-shell ~/.tmux/tmux-resurrect/resurrect.tmux
+
+# Disable timout for windows
+set-option -g repeat-time 0
