--- a/.gitmodules
+++ b/.gitmodules
@@ -43,3 +43,6 @@
 [submodule ".vim/bundle/vim-workspace"]
 	path = .vim/bundle/vim-workspace
 	url = https://github.com/thaerkh/vim-workspace
+[submodule ".vim/bundle/YouCompleteMe"]
+	path = .vim/bundle/YouCompleteMe
+	url = https://github.com/Valloric/YouCompleteMe.git
