--- a/.config/i3/config
+++ b/.config/i3/config
@@ -26,11 +26,15 @@ font xft:URWGothic-Book 11
 # Use Mouse+$mod to drag floating windows
 floating_modifier $mod
 
+# start arandr
+bindsym $mod+p exec arandr
+
 # start a terminal
 bindsym $mod+Return exec alacritty
 
 # kill focused window
 bindsym $mod+Shift+q kill
+bindsym Mod1+F4 kill
 
 # start program launcher
 bindsym $mod+d exec --no-startup-id dmenu_recency
